[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "laypatel13-expense-tracker"
version = "0.1.2"
description = "A colorful CLI expense tracker"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Lay Patel", email = "lay.patel.1313@gmail.com"}
]
keywords = ["cli", "expense", "tracker", "finance"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
]
dependencies = [
    "colorama==0.4.6",
    "tabulate>=0.9.0",
]

[project.scripts]
expense-tracker = "expense_tracker.main:main"

[project.urls]
Homepage = "https://github.com/laypatel13/expense-tracker"